# PokeC-

./: CMakeLists.txt  README.md
data/League/: blaine.json  brock.json  erika.json  giovanni.json  koga.json  misty.json  sabrina.json  surge.json
data/Moves/: Absorb.json  Acid.json  Agility.json  Amnesia.json  Aurora_beam.json  Barrier.json  Bite.json  Blizzard.json  Body_slam.json  Bone_club.json  Bubble.json  Bubble_beam.json  Constrict.json  Double_edge.json  Explosion.json  Fire_blast.json  Flamethrower.json  Flash.json  Glare.json  Growl.json  Growth.json  Gust.json  Harden.json  Hydro_pump.json  Hyper_fang.json  Hypnosis.json  Ice_beam.json  Kinesis.json  Leer.json  Mega_drain.json  Mega_kick.json  Pay_day.json  Poison_gas.json  Poison_powder.json  Pound.json  Psybeam.json  Psychic.json  Razor_leaf.json  Rock_slide.json  Rolling_kick.json  (+20 more)
data/Moves/effectiveness/: Bug.json  Dark.json  Dragon.json  Electric.json  Fairy.json  Fighting.json  Fire.json  Flying.json  Ghost.json  Grass.json  Ground.json  Ice.json  Normal.json  Poison.json  Psychic.json  Rock.json  Steel.json  Water.json
data/Pokemons/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  133.json  134.json  135.json  (+111 more)
data/Sprites/Gameplay/: medidas.txt
include/Core/: AssetManager.h  Game.h  Selections.h  World.h
include/Core/Screens/: Badges.h  Screens.h  Title.h
include/Gameplay/: Combat.h  JsonsConv.h  Rival.h
include/Gameplay/Moves/: Damage_move.h  Move.h  Status_move.h
include/Gameplay/Pokemons/: Pokemon.h
include/Panels/: Interfaces.h
include/UI/: Text.h
include/Utils/: Constants.h
src/: main.cpp
src/Core/: AssetManager.cpp  Game.cpp  Selections.cpp  Text.cpp  World.cpp
src/Core/Screens/: Badges.cpp  Screens.cpp  Title.cpp
src/Gameplay/: Combat.cpp  Rival.cpp
src/Gameplay/Moves/: Damage_move.cpp  Move.cpp  Status_move.cpp
src/Gameplay/Pokemons/: Pokemon.cpp
src/Panels/: Interfaces.cpp
(+65 files in other folders)
